# MultiplayerServer

./: .gitignore  Cargo.toml  Dockerfile  README.md  actix-deployment.yaml  actix-service.yaml  asset-manifest.json  deploy  docker-compose.yml  index.html  manifest.json  package.json  redis-deployment.yaml  redis-service.yaml  service-worker.js  tsconfig.json  tslint.json
.circleci/: config.yml
client/: README.md  package-lock.json  package.json  tsconfig.json  tslint.json  webpack.config.js
client/public/: index.html
client/src/: Set.js  Set.ts  index.css  index.tsx  set.ts  types.d.ts
deckBuilder/: ideas.md  original.tsx
public/: index.html
server/: Cargo.toml  README.md  Set.js  app.js  app.ts  index.html  package-lock.json  package.json  set.js  tsconfig.json  types.d.ts  webpack.config.js
server/src/: main.rs
server_node/: app.js  tslint.json  webpack.config.js
src/: App.css  App.tsx  Board.tsx  Card.css  Card.tsx  Set.js  Set.ts  index.tsx  lib.rs  main.rs  reducers.ts  server.rs  set.js  store.ts  types.d.ts
src/components/: Card.tsx
src/deckBuilder/: GeometricDeckGenerator.tsx  animations.tsx  filters.tsx  ideas.md  index.d.ts  original.tsx  triangles.tsx
static/css/: main.10f69ceb.css  main.10f69ceb.css.map  main.2602eac6.css  main.2602eac6.css.map  main.4f4dab06.css  main.4f4dab06.css.map  main.71a34d4d.css  main.71a34d4d.css.map  main.8f8cb765.css  main.8f8cb765.css.map  main.f13854f3.css  main.f13854f3.css.map  main.f70c8a89.css  main.f70c8a89.css.map
static/js/: main.2d6c646b.js  main.2d6c646b.js.map  main.44ba787c.js  (+25 more)
(+59 files in other folders)
