[package]
name = "multiplayer_server"
version = "0.1.0"
authors = ["Tim <hello@timothy.best>"]

[dependencies]
set = { git = "https://github.com/GeneralSet/Set" }

rand = "*"

log = "*"
env_logger = "*"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

actix = "0.7"
actix-web = "0.7"
